<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discoverFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/discover" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/map" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/notifications" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>

